<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_question_point_center_map" />

        <org.osmdroid.views.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="12dp">

        </org.osmdroid.views.MapView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_question_point_secondary_question" />

        <Spinner
            android:id="@+id/spinner_question_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/textview_secondary_question_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:text="@string/default_question_title"
            app:layout_anchor="@+id/scrolllist"
            app:layout_anchorGravity="top|center" />

        <EditText
            android:id="@+id/textview_secondary_question_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:text="@string/default_poll_description" />

        <FrameLayout
            android:id="@+id/secondary_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="300dp" />

    </LinearLayout>

</FrameLayout>